# 01_projeto_ml

./: App.py  README.md  pyproject.toml  teste.ipynb
